# tg-bot

./: CMakeLists.txt
.cache/clangd/index/: Bot.cpp.E424069AC9DFBBA1.idx  Bot.h.7359967EA0CD1866.idx  main.cpp.30D0A8CAD1D09E5A.idx
include/: Bot.h
src/: Bot.cpp  main.cpp
